--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ weasyprint==61.2
 
 # Gemini (official client)
 google-generativeai==0.7.2
+
+# Testing
+pytest==8.3.2
+pytest-asyncio==0.23.8
+httpx==0.27.2  # Already included above, needed for testing
