--- a/env.example
+++ b/env.example
@@ -48,5 +48,5 @@ LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR
 # 2. Use different values for staging/production
 # 3. GCP_PROJECT should match your Google Cloud project
 # 4. WORKER_URL should be the full URL of your deployed service
-# 5. TASKS_SERVICE_ACCOUNT_EMAIL needs 'Cloud Tasks Enqueuer' permission
+# 5. TASKS_SERVICE_ACCOUNT_EMAIL needs 'Cloud Tasks Enqueuer' + 'Cloud Run Invoker' permissions
 # 6. SUPABASE_SERVICE_KEY has admin privileges - keep secure!
