--- a/env.example
+++ b/env.example
@@ -32,7 +32,7 @@ TASKS_SERVICE_ACCOUNT_EMAIL=your-service-account@your-project.iam.gserviceaccoun
 STORAGE_BUCKET=reports
 
 # Grading Configuration
-GRADER_MODE=gemini  # 'gemini' or 'dummy' for testing
+GRADER_MODE=dummy  # 'gemini' or 'dummy' for testing
 
 # Webhook Security (Recommended for production)
 AI_WEBHOOK_SECRET=your-webhook-secret-key
